fixed blogs and activities alignment

--- a/public/css/activities.css
+++ b/public/css/activities.css
@@ -15,6 +15,8 @@ nav {
 
 }
 
+
+
 .button {
     border:1px solid rgb(20, 20, 20);
     border-radius: 5px;
@@ -45,17 +47,31 @@ nav {
     background-color: yellow;
 }
 
+
+
 .event {
     width: 100%;
     height: 250px;
-    background-color: blue;
+    overflow: hidden;
+}
+
+.event:nth-child(odd) {
+    background-color: #a1f0e5;
 }
 
 .event * {
   /* float: left; */
 }
+
+
+.container-image{
+    float: left;
+    width: 30%;
+    height: 100%;
+
+}
 .container-discription {
-    float: right;
+    float: left;
     position: relative;
     width: 70%;
     height: 500px;
@@ -73,10 +89,4 @@ p {
 }
 img {
     margin: 15px 15px; 
-}
-
-.container-image{
-    width: 30%;
-    height: 100%;
-    float: left;
 }
