--- a/public/css/blogs.css
+++ b/public/css/blogs.css
@@ -1,4 +1,6 @@
-body {}
+html (min-height: 100%) /*might be a bug here*/
+
+body {height: 100%}
 
 
 .signIn-form {
@@ -51,6 +53,11 @@ body {}
     width: 100%;
     height: 250px;
     background-color: blue;
+    overflow: hidden;
+}
+
+.event:nth-child(odd) {
+    background-color: #a1f0e5;
 }
 
 .event * {
@@ -70,4 +77,8 @@ p {
     height: 2px;
     border-top: 2px solid black;
     width: 100%;
+}
+
+textarea {
+    left: 15px;
 }
